<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_hideable="false"
    app:layout_behavior="@string/bottom_sheet_behavior"
    tools:context=".edit.AlarmEditFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/alarm_background"
        android:contentDescription="@string/alarm_image"
        android:padding="20dp"
        android:src="@drawable/ic_round_alarm"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/singerNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/songNameTextView"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="Singer Name" />

    <TextView
        android:id="@+id/songNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textColor="@color/grayLight"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/singerNameTextView"
        tools:text="Song Name" />

    <TextView
        android:id="@+id/alarmTimeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4.Custom"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:text="08:50" />

    <TextView
        android:id="@+id/alarmTimePeriodTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="5dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/alarmTimeTextView"
        app:layout_constraintStart_toEndOf="@id/alarmTimeTextView"
        app:layout_constraintTop_toTopOf="@id/alarmTimeTextView"
        tools:text="AM" />

    <TextView
        android:id="@+id/durationTextView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:textColor="@color/grayLight"
        app:drawableStartCompat="@drawable/ic_round_alarm"
        app:layout_constraintBottom_toBottomOf="@id/alarmTimeTextView"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintTop_toTopOf="@id/alarmTimeTextView"
        tools:text="in 5 days, 11 hours" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/add_music"
        android:src="@drawable/ic_music"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintTop_toTopOf="@id/imageView" />

    <TextView
        android:id="@+id/addMusicTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/add_music"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/grayLight"
        app:layout_constraintBottom_toBottomOf="@id/fab"
        app:layout_constraintEnd_toStartOf="@id/fab"
        app:layout_constraintTop_toTopOf="@id/fab" />

    <EditText
        android:id="@+id/descriptionEditText"
        style="@style/CustomEditTextStyle"
        android:layout_marginTop="20dp"
        android:hint="@string/enter_a_description"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/alarmTimeTextView"
        tools:text="Description"
        android:importantForAutofill="no" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/snoozeFab"
        style="@style/CheckableCustomExtendedFab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/snooze"
        app:icon="@drawable/ic_snooze"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/vibrationFab"
        app:layout_constraintTop_toBottomOf="@id/descriptionEditText" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/vibrationFab"
        style="@style/CheckableCustomExtendedFab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/vibrate"
        app:icon="@drawable/ic_vibration"
        app:layout_constraintEnd_toStartOf="@id/snoozeFab"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/descriptionEditText" />

    <TextView
        android:id="@+id/daysTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/days"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/grayLight"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/vibrationFab" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/daysToggleGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/daysTextView">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mondayButton"
            style="@style/RoundMaterialButton"
            android:text="@string/monday_abbr" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/tuesdayButton"
            style="@style/RoundMaterialButton"
            android:text="@string/tuesday_abbr" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/wednesdayButton"
            style="@style/RoundMaterialButton"
            android:text="@string/wednesday_abbr" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/thursdayButton"
            style="@style/RoundMaterialButton"
            android:text="@string/thursday_abbr" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/fridayButton"
            style="@style/RoundMaterialButton"
            android:text="@string/friday_abbr" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/saturdayButton"
            style="@style/RoundMaterialButton"
            android:text="@string/saturday_abbr" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sundayButton"
            style="@style/RoundMaterialButton"
            android:text="@string/sunday_abbr" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/deleteFab"
        style="@style/CustomExtendedFab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/delete"
        app:backgroundTint="?attr/colorPrimaryVariant"
        app:icon="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="@id/saveFab"
        app:layout_constraintEnd_toStartOf="@id/saveFab"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toTopOf="@id/saveFab" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/saveFab"
        style="@style/CustomExtendedFab"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="20dp"
        android:text="@string/save"
        app:icon="@drawable/ic_alarm_on"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toEndOf="@id/vibrationFab"
        app:layout_constraintTop_toBottomOf="@id/daysToggleGroup"
        app:layout_constraintVertical_bias="1" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/musicGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:constraint_referenced_ids="imageView, singerNameTextView, songNameTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>