<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_draggable="false"
    app:behavior_hideable="false"

    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/feedbackTitleTextView"
        style="@style/TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/doub_grid_size"
        android:text="@string/feedback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/feedbackTextView"
        style="@style/SimpleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/doub_grid_size"
        android:text="@string/feedback_explanation"
        android:textColor="@color/grayLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedbackTitleTextView" />

    <EditText
        android:id="@+id/nameEditText"
        style="@style/CustomEditTextStyle"
        android:layout_marginTop="@dimen/doub_grid_size"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/feedbackTextView" />

    <EditText
        android:id="@+id/emailEditText"
        style="@style/CustomEditTextStyle"
        android:layout_marginTop="@dimen/doub_grid_size"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/nameEditText" />

    <EditText
        android:id="@+id/messageEditText"
        style="@style/CustomEditTextStyle"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/doub_grid_size"
        android:focusable="true"
        android:gravity="top"
        android:hint="@string/feedback_message"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:isScrollContainer="true"
        android:lineSpacingExtra="@dimen/half_grid_size"
        android:lines="15"
        android:minLines="15"
        android:padding="@dimen/base_grid_size"
        app:layout_constraintBottom_toTopOf="@id/sendButton"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/emailEditText"
        app:layout_constraintVertical_bias="0" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/sendButton"
        style="@style/CustomExtendedFab"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/x4_grid_size"
        android:text="@string/send_feedback"
        app:icon="@drawable/ic_send"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>