<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:behavior_hideable="false"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/RatingTitleTextView"
        style="@style/TitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/doub_grid_size"
        android:text="@string/rate_us"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ratingTextView"
        style="@style/SimpleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/doub_grid_size"
        android:text="@string/rating_explanation"
        android:textColor="@color/grayLight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/RatingTitleTextView" />

    <com.hsalf.smilerating.SmileRating
        android:id="@+id/smileRating"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_grid_size"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/ratingTextView"
        app:placeHolderBackgroundColor="#d6d8dd"
        app:angryColor="#f2dd68"
        app:textSelectionColor="#f2dd68" />

    <TextView
        android:id="@+id/requestReviewTextView"
        style="@style/SimpleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_explanation"
        android:textColor="@color/grayLight"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/smileRating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/smileRating" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/submitButton"
        style="@style/CustomExtendedFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/base_grid_size"
        android:layout_marginTop="@dimen/half_grid_size"
        android:text="@string/submit"
        app:layout_constraintEnd_toEndOf="@id/endGuideline"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@id/startGuideline"
        app:layout_constraintTop_toBottomOf="@id/smileRating" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/notNowButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/base_grid_size"
        android:text="@string/not_now"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        android:textColor="@color/grayLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/submitButton"
        app:layout_constraintVertical_bias="0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/startGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />
</androidx.constraintlayout.widget.ConstraintLayout>